Fix dependency conflicts for Render deployment
- Created requirements-render.txt with minimal dependencies
- Removed conflicting packages (torch, transformers, mistralai, etc.)
- Only includes packages needed for Ollama deployment
- Updated Dockerfiles to use requirements-render.txt
- Upgraded pip during build to avoid version issues

--- a/Dockerfile.light
+++ b/Dockerfile.light
@@ -14,8 +14,9 @@ RUN apt-get update && apt-get install -y \
 RUN curl -fsSL https://ollama.com/install.sh | sh
 
 # Copy requirements
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements-render.txt requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy application
 COPY . .
