--- a/requirements-render.txt
+++ b/requirements-render.txt
@@ -1,20 +1,21 @@
 # Minimal requirements for Ollama deployment on Render
-# Only includes essential packages
+# Only includes essential packages - no strict versions to avoid conflicts
 
 # Web Framework
-flask==3.0.0
-flask-socketio==5.3.6
-flask-cors==4.0.0
+flask>=3.0.0
+flask-socketio>=5.3.0
+python-socketio>=5.0.0
+werkzeug>=3.0.0
 
-# Core LangChain for Ollama
-langchain-ollama==0.1.3
-langchain-core==0.3.0
+# Core LangChain for Ollama (minimal)
+langchain-ollama>=0.1.0
+langchain-core>=0.2.0
 
-# Translation (optional but included)
-deep-translator==1.11.4
+# Translation
+deep-translator>=1.11.0
 
 # Environment Variables
-python-dotenv==1.0.0
+python-dotenv>=1.0.0
 
-# UI formatting (for logs)
-colorama==0.4.6
+# Basic utilities
+requests>=2.31.0
